--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,9 @@
+# 在此粘贴你的 config.yaml...
+# 或拖拽文件到编辑器区域
+# 或点击右上角"加载官网最新配置"
 # ═══════════════════════════════════════════════════════════════
 #                    TrendRadar 配置文件
-#                      Version: 2.0.0
+#                      Version: 1.2.0
 # ═══════════════════════════════════════════════════════════════
 
 
@@ -11,7 +14,7 @@
 # 1. 基础设置
 # ===============================================================
 app:
-  # 时区配置（影响所有时间显示、调度系统判断、数据存储）
+  # 时区配置（影响所有时间显示、推送窗口判断、数据存储）
   # 常用时区：
   #   - Asia/Shanghai (北京时间 UTC+8)
   #   - America/New_York (美东时间 UTC-5/-4)
@@ -19,29 +22,6 @@ app:
   # 完整时区列表: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   timezone: "Asia/Shanghai"
   show_version_update: true           # 显示版本更新提示
-
-
-# ===============================================================
-# 1.5 调度系统 —— 什么时间做什么事
-#
-# 通过 timeline.yaml 里定义的时间段来自动决定：
-#   - 什么时候推送通知
-#   - 什么时候做 AI 分析
-#   - 用什么报告模式
-#
-# 快速上手：选一个预设模板，改 preset 的值就行
-#
-#   always_on       → 全天候，有新增即推送
-#   morning_evening → 全天推送 + 晚间当日汇总（推荐）
-#   office_hours    → 工作日三段式（到岗→午间→收工），周末增量自由推
-#   night_owl       → 午后速览 + 深夜全天汇总
-#   custom          → 完全自定义，详见 timeline.yaml
-#
-# 详细时间线图请查看 config/timeline.yaml
-# ===============================================================
-schedule:
-  enabled: true                         # 是否启用调度系统
-  preset: "morning_evening"             # 预设模板名称（见上方说明）
 
 
 # ===============================================================
@@ -57,18 +37,12 @@ platforms:
   sources:
     - id: "toutiao"
       name: "今日头条"
-    - id: "baidu"
-      name: "百度热搜"
     - id: "wallstreetcn-hot"
       name: "华尔街见闻"
     - id: "thepaper"
       name: "澎湃新闻"
-    - id: "bilibili-hot-search"
-      name: "bilibili 热搜"
     - id: "cls-hot"
       name: "财联社热门"
-    - id: "ifeng"
-      name: "凤凰网"
     - id: "tieba"
       name: "贴吧"
     - id: "weibo"
@@ -155,10 +129,7 @@ rss:
 #    • 适用场景：避免重复信息干扰
 # ===============================================================
 report:
-  mode: "current"                     # 可选: daily | current | incremental
-                                      # ⚠️ 开启调度系统后，此值会被当前时间段的 report_mode 覆盖
-
-
+  mode: "daily"                     # 可选: daily | current | incremental
   display_mode: "keyword"             # 分组维度: keyword | platform
                                       # keyword: 按关键词分组显示（默认）
                                       # platform: 按平台/来源分组显示
@@ -192,34 +163,19 @@ display:
   #   2. 下方 regions 中对应开关为 true
   region_order:
     - new_items                       # 1️⃣ 新增热点区域
-    - hotlist                         # 2️⃣ 热榜区域（关键词匹配）
-    - rss                             # 3️⃣ RSS 订阅区域
-    - standalone                      # 4️⃣ 独立展示区
-    - ai_analysis                     # 5️⃣ AI 分析区域
-
-  # 推送区域开关
-  # 控制各区域是否启用（配合 region_order 使用）
+    - hotlist                       # 2️⃣ 热榜区域（关键词匹配）
+    - ai_analysis                       # 5️⃣ AI 分析区域
+    - rss                       # 3️⃣ RSS 订阅区域
+    - standalone                       # 4️⃣ 独立展示区
   regions:
-    hotlist: true                     # 热榜区域（关键词匹配的热点新闻）
-    new_items: false                   # 新增热点区域（含热榜新增 + RSS 新增）
-                                      # 注：热点词汇统计中的新增标记🆕不受此配置影响
-
-    rss: true                         # RSS 订阅区域
-                                      # 开启后将对 RSS 进行关键词分析并在通知中展示
-                                      # 关闭后跳过分析，但独立展示区不受影响
-
-    standalone: false                 # 独立展示区（完整热榜/RSS，不受关键词过滤）
-    ai_analysis: true                 # AI 分析区域
-
-  # 📋 独立展示区配置
-  # 用途：将指定平台的完整热榜/RSS 数据独立提取，不受关键词过滤影响
-  # 两个独立用途：
-  #   - 推送展示：由 regions.standalone 开关控制，在推送中单独展示完整热榜
-  #   - AI 分析：由 ai.include_standalone 开关控制，将完整数据送入 AI 做深度分析
-  # 两者共享此处的平台/RSS 配置，但开关互相独立（可只开 AI 分析、不推送展示）
+    new_items: true # 新增热点区域（含热榜新增 + RSS 新增）
+    hotlist: true # 热榜区域（关键词匹配的热点新闻）
+    ai_analysis: true # AI 分析区域
+    rss: true # RSS 订阅区域
+    standalone: true # 独立展示区（完整热榜/RSS，不受关键词过滤）
   standalone:
-    platforms: ["zhihu", "wallstreetcn-hot"]     # 热榜平台 ID 列表（如 ["zhihu", "weibo"]）
-    rss_feeds: []                     # RSS 源 ID 列表（如 ["hacker-news"]）
+    platforms: ["toutiao","wallstreetcn-hot"] # 热榜平台 ID 列表（如 ["zhihu", "weibo"]）
+    rss_feeds: ["hacker-news","ruanyifeng","yahoo-finance"] # RSS 源 ID 列表（如 ["hacker-news"]）
     max_items: 20                     # 每个源最多展示条数（0=不限制）
 
 
@@ -244,10 +200,26 @@ display:
 # • 邮箱已支持多收件人（逗号分隔）
 # ===============================================================
 notification:
-  enabled: true                       # 是否启用通知功能（总开关）
-                                      # ⚠️ 开启调度系统后，此项仍为总开关：
-                                      #   false → 永远不推送（无论调度怎么设置）
-                                      #   true  → 由调度的 push 字段控制何时推送
+  enabled: true                       # 是否启用通知功能
+
+  # 🕐 推送时间窗口控制（可选功能）
+  # 用途：限制推送的时间范围，避免非工作时间打扰
+  # 适用场景：
+  #   • 只想在工作日白天接收推送（如 09:00-18:00）
+  #   • 希望在晚上固定时间收到汇总（如 20:00-22:00）
+  #   • 夜间工作者可配置跨日窗口（如 22:00-02:00）
+  # ⚠️ GitHub Actions 用户注意：
+  #   执行时间不稳定，时间范围建议至少留足 2 小时
+  # 💡 想要精准定时？建议使用 Docker 部署在个人服务器上
+  #
+  # 📌 跨日时间窗口支持：
+  #   • 正常窗口：start < end，如 09:00-21:00（当天 9 点到 21 点）
+  #   • 跨日窗口：start > end，如 22:00-02:00（当天 22 点到次日 2 点）
+  push_window:
+    enabled: false                    # 是否启用推送时间窗口控制
+    start: "20:00"                    # 开始时间（使用 app.timezone 配置的时区）
+    end: "22:00"                      # 结束时间（支持跨日，如 end: "02:00"）
+    once_per_day: true                # true=窗口内只推送一次，false=窗口内每次执行都推送
 
   # 推送渠道配置
   channels:
@@ -351,11 +323,11 @@ ai:
   # 完整列表: https://docs.litellm.ai/docs/providers
   # 如果你对于看英文文档比较头疼，那么可以点击页面右下角的 【Ask AI】 ,用中文询问怎么配置 
   
-  model: "deepseek/deepseek-chat"
+  model: "gpt-4o"
 
-  api_key: ""                       # API Key（建议使用环境变量 AI_API_KEY）
+  api_key: "sk-zXwJ87N1ytRXoGisHLthPqFEcftxLqezOgex1dk8sfvkLBvL"                       # API Key（建议使用环境变量 AI_API_KEY）
   
-  api_base: ""                      # 自定义 API 端点（可选，大多数情况留空）
+  api_base: "https://api.chatanywhere.tech"                      # 自定义 API 端点（可选，大多数情况留空）
                                     # 示例: https://api.openai.com/v1（自建代理或兼容接口）
                                     #
                                     # 💡 超级重要：连接任意兼容 OpenAI 协议的模型商
@@ -404,10 +376,26 @@ ai:
 # 模型配置见上方 ai 配置段
 # ===============================================================
 ai_analysis:
-  enabled: true                     # 是否启用 AI 分析（总开关）
-                                    # ⚠️ 开启调度系统后，此项仍为总开关：
-                                    #   false → 永远不分析（无论调度怎么设置）
-                                    #   true  → 由调度的 analyze 字段控制何时分析
+  enabled: true                     # 是否启用 AI 分析
+
+  # 🕐 AI 分析时间窗口控制（可选功能）
+  # 用途：限制 AI 分析的时间范围，避免非必要时段消耗 API 额度
+  # 适用场景：
+  #   • 只在工作时间进行 AI 分析（如 09:00-18:00）
+  #   • 在特定时段进行深度分析（如 20:00-22:00）
+  #   • 夜间工作者可配置跨日窗口（如 22:00-02:00）
+  # ⚠️ GitHub Actions 用户注意：
+  #   执行时间不稳定，时间范围建议至少留足 2 小时
+  # 💡 想要精准定时？建议使用 Docker 部署在个人服务器上
+  #
+  # 📌 跨日时间窗口支持：
+  #   • 正常窗口：start < end，如 09:00-22:00（当天 9 点到 22 点）
+  #   • 跨日窗口：start > end，如 22:00-02:00（当天 22 点到次日 2 点）
+  analysis_window:
+    enabled: false                  # 是否启用 AI 分析时间窗口控制
+    start: "09:00"                  # 开始时间（使用 app.timezone 配置的时区）
+    end: "22:00"                    # 结束时间（支持跨日，如 end: "02:00"）
+    once_per_day: false             # true=窗口内只分析一次，false=窗口内每次执行都分析
 
   # 分析报告输出语言
   # 格式：自然语言描述
@@ -431,28 +419,23 @@ ai_analysis:
   mode: "follow_report"
 
   # 分析内容配置
-  max_news_for_analysis: 150        # 热榜+RSS 合计参与分析的新闻数量上限（控制成本关键项）
-                                    # 热榜优先占用配额，RSS 使用剩余配额；独立展示区不受此限制
+  max_news_for_analysis: 60         # 参与分析的新闻数量上限（控制成本关键项）
                                     # 推送消息顶部会显示实际的 AI 分析数供参考
 
                                     # api 成本估算 (仅供参考)
                                       # 按默认模型(deepseek)
-                                      # max_news_for_analysis 为 【50】 条
-                                      # include_rank_timeline 为 【false】
+                                      # max_news_for_analysis 为 50 条
+                                      # include_rank_timeline 为 false
                                     # 则
                                       # GitHub Action 部署默认推送约 20 次（每小时推送一次）， 约 0.1 元/天
                                       # Docker 部署默认推送 48 次(每半小时推送一次)， 约 0.2 元/天
 
-  include_rss: false                # 是否包含 RSS 内容进行分析
-  
-  include_standalone: true          # 是否将独立展示区数据纳入 AI 分析（只需上方 display 区的 standalone 配置了平台/RSS 即可）
+  include_rss: false                 # 是否包含 RSS 内容进行分析
 
-  include_rank_timeline: true       # 是否传递完整排名时间线
+  include_rank_timeline: true      # 是否传递完整排名时间线
                                     # false: 使用简化格式（排名范围+时间范围+出现次数）
                                     # true: 传递完整排名变化轨迹（如 1(09:30)→2(10:00)→0(11:00)）
                                     # 启用后 AI 能更精确分析热度趋势，但会额外增加 token 消耗（0.5 倍到 1 倍）
-
-
 
 
 # ===============================================================
@@ -467,7 +450,7 @@ ai_translation:
   # 翻译目标语言
   # 格式：自然语言描述
   # 示例: "Chinese", "Korean", "法语"
-  language: "中文"
+  language: "English"
 
   # 提示词配置文件路径（相对于 config 目录）
   prompt_file: "ai_translation_prompt.txt"
@@ -516,4 +499,4 @@ advanced:
     bark: 4000
     slack: 4000
   batch_send_interval: 3              # 批次发送间隔（秒）
-  feishu_message_separator: "━━━━━━━━━━━━━━━━"
+  feishu_message_separator: "━━━━━━━━━━━━━━━━━━━"
